<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileEvent</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="station_prompt">Stations</string>
    <string name="creer">creer</string>
    <string name="consulter">consulter</string>
    <string name="effacer">effacer</string>
    <string name="user">User</string>

    <string-array name="station_arrays">
        <item>connected</item>
        <item>Disconnected</item>
    </string-array>

    <string name="title_activity_events_menu">EventsMenuActivity</string>
    <string name="titre">Titre</string>
    <string name="nom">Nom</string>
    <string name="e_mail">E-mail</string>
    <string name="jours">Jours</string>
    <string name="options_choix">Options</string>
    <string name="title_activity_consulter">Consulter</string>

</resources>