<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BEDEFF" >

    

    <TableRow
        android:id="@+id/tableRowTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/textViewTitre"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/titre" />

        <EditText
            android:id="@+id/editTextTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="textMultiLine" >
            <requestFocus />
        </EditText>
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRowNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/textViewNom"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="textMultiLine" >
        </EditText>
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRowEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="textEmailAddress" >
        </EditText>
    </TableRow>
    
     <TextView
            android:id="@+id/textViewJours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
             android:layout_marginTop="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/jours" />
     
    <TableRow
        android:id="@+id/tableRowJours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <EditText
            android:id="@+id/editTextJour1"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="1dip"
            android:background="#FFFFFF"
            android:inputType="date" 
            
            >
            
        </EditText>
        
        <EditText
            android:id="@+id/editTextJour2"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="2dip"
            android:background="#FFFFFF"
            android:inputType="date" >
        </EditText>
        
        <EditText
            android:id="@+id/editTextJour3"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="date" >
        </EditText>
        
    </TableRow>

</LinearLayout>