<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BEDEFF" >
    
	<TableRow
        android:id="@+id/tableRowTitreChoix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/textViewTitreChoix"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/titre" />

        <EditText
            android:id="@+id/editTextTitreChoix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="textMultiLine" >
            <requestFocus />
        </EditText>
    </TableRow>
    
	<TableRow
        android:id="@+id/tableRowNomChoix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/textViewNomChoix"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/editTextNomChoix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="textMultiLine" >
        </EditText>
    </TableRow>
    
	<TableRow
        android:id="@+id/tableRowEmailChoix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/textViewEmailChoix"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/editTextEmailChoix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="textEmailAddress" >
        </EditText>
    </TableRow>
    
	<TextView
            android:id="@+id/textViewOptionsChoix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
             android:layout_marginTop="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/options_choix" />
     
    <TableRow
        android:id="@+id/tableRowOptionsChoix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <EditText
            android:id="@+id/editTextOptionChoix1"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="5dip"
            android:background="#FFFFFF"
            android:inputType="textMultiLine" >
        </EditText>
        
        <EditText
            android:id="@+id/editTextOptionChoix2"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="#FFFFFF"
            android:inputType="textMultiLine" >
        </EditText>
        
        <EditText
            android:id="@+id/editTextOptionChoix3"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="20dip"
            android:background="#FFFFFF"
            android:inputType="textMultiLine" >
        </EditText>
        
    </TableRow>
</LinearLayout>
